@@ -1373,3 +1373,8 @@
 ===============================================================================
 29 Nov 97: Released TclX 8.0.2
 ===============================================================================
+22 Jan 98: 
+  o Added fixes for handling some corner cases in saving and restoring
+    interp state on signals. Debugged and submitted by the ever-helpful
+    <Viktor-Dukhovni@deshaw.com>.
+-------------------------------------------------------------------------------
